# gitlab2prov

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  example.ini  gitlab2prov.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug-report---.md  bug-report--.md  bug-report.md  feature-request--.md  feature-request.md  question--.md  question-.md  question.md
.github/workflows/: aws-ecs.yml  cffconvert.yml  mypy-check.yml  python-publish.yml  pythonapp.yml
config/: config.ini.example  example.ini  example.yaml
docs/: README.md  figures.py  model.py  plot.py
docs/guides/: github-token.md  gitlab-token.md
gitlab2prov/: __init__.py  bootstrap.py  cli.py  config.py  log.py  pipelines.py  profile.py  root.py  schema.json
gitlab2prov/adapters/: project_url.py  repository.py
gitlab2prov/adapters/fetch/: __init__.py  _git.py  _github.py  _gitlab.py  git.py  github.py  gitlab.py  parse.py  utils.py
gitlab2prov/adapters/fetch/annotations/: __init__.py  classifiers.py  parse.py
gitlab2prov/adapters/git/: __init__.py  fetcher.py
gitlab2prov/adapters/hub/: __init__.py  fetcher.py  parser.py
gitlab2prov/adapters/lab/: __init__.py  classifiers.py  fetcher.py  parser.py
gitlab2prov/adapters/miners/: __init__.py  annotation_parsing.py  git.py  gitlab.py
gitlab2prov/api/: __init__.py
gitlab2prov/config/: __init__.py  config.py  parser.py  schema.json
gitlab2prov/domain/: commands.py  constants.py  objects.py
gitlab2prov/entrypoints/: cli.py
gitlab2prov/models/: __init__.py
gitlab2prov/procs/: __init__.py  meta.py
gitlab2prov/procs/history/: __init__.py
gitlab2prov/procs/parser/: __init__.py  classifier.py
gitlab2prov/prov/: model.py  operations.py
gitlab2prov/service_layer/: handlers.py  messagebus.py  unit_of_work.py
gitlab2prov/utils/: __init__.py
gl2p/: __init__.py  commons.py  config.py  eventparser.py  gitlab.py  helpers.py  models.py  network.py  objects.py  origin.py  pipelines.py  pipes.py  processor.py  ratelimiter.py  register.py  translator.py  translators.py  utils.py
gl2p/api/: __init__.py  gitlab.py  ratelimiter.py
gl2p/models/: __init__.py
gl2p/procs/: __init__.py  meta.py
gl2p/procs/history/: __init__.py  nametable.py
gl2p/procs/parser/: __init__.py  classifier.py
gl2p/utils/: __init__.py  helpers.py  objects.py  types.py
metrics/: m5.cql  m7.cql
models/: README.md  commit_model_add.py  commit_model_add_file.py  commit_model_delete.py  commit_model_delete_file.py  commit_model_event_create.py  commit_model_event_update.py  commit_model_modify.py  commit_model_modify_file.py  commit_model_new_commit.py  commit_model_new_commit_event.py  draw.py  issue_model_marked_as_duplicate.py  issue_model_new_issue.py  issue_model_new_issue_event.py  plot.py
queries/: m7.cql
test/: test_helpers.py
tests/: conftest.py  random_refs.py  test_config.py  test_helpers.py
tests/integration/: test_repository.py
tests/unit/: test_annotation_parsing.py  test_classifiers.py  test_fetch_utils.py  test_handlers.py  test_objects.py  test_operations.py  test_repository.py
tests/unit/objects/: test_file.py  test_user.py
