[metadata]
name = gitlab2prov
version = 1.0
license = MIT
url = https://github.com/DLR-SC/gitlab2prov
author = Claas de Boer
author_email = claas.deboer@dlr.de
maintainer = Andreas Schreiber
maintainer_email = andreas.schreiber@dlr.de
description = Extract provenance information (W3C PROV) from GitLab projects.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Version Control :: Git
keywords =
    prov
    gitlab
    provenance
    prov generation
    software analytics
    w3c prov

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    prov>=2.0.0
    git-python
    python-gitlab
    regex>=2022.3.15
    pydot

[options.entry_points]
console_scripts =
    gitlab2prov = gitlab2prov.entrypoints.cli:main

[options.extras_require]
testing =
    pytest
    pytest-mock
    black
